fixed heading overflow issue

--- a/style/main.css
+++ b/style/main.css
@@ -26,7 +26,7 @@
 #headings {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: flex-start;
 }
